<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MatchSense</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_signin">Sign In</string>
    <string name="signup_question">Already have an account?</string>
    <string name="logout">Logout</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="MatchSense">MatchSense</string>
    <string name="compare">Compare</string>
    <string name="compare_description">Comparing two text to check similarity between them</string>
    <string name="translate">Translate</string>
    <string name="translate_description">Translate from English to Indonesia or vice versa</string>
    <string name="synonym">Synonym Search</string>
    <string name="synonym_description">"Need help finding word\'s synonym? This is the place!</string>
    <string name="settings">Settings</string>
    <string name="settings_description">This is a setting button, click to open setting menu</string>
    <string name="feature">Main Feature</string>
    <string name="other">Other</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="reminder">Reminder</string>
    <string name="username">Username</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="back_button">Back button</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="no_word_toast">Please enter a word</string>
    <string name="word_meaning">Word Meaning</string>
    <string name="what_is_the_meaning_of_the_word">Meaning of The Word</string>
    <string name="powered_by">Powered by</string>
    <string name="enter_text">Enter Text</string>
    <string name="indonesian">Indonesian</string>
    <string name="english">English</string>
    <string name="no_text_toast">Please enter a text</string>
    <string name="switch_translate">Switch Translate</string>
    <string name="to">to</string>
    <string name="language_icon">Change Language Icon</string>
    <string name="language_button">Change Language Button</string>
    <string name="notification_icon">Enable Notification Icon</string>
    <string name="choose_language">Choose Language</string>
    <string name="notification_title">MatchSense</string>
    <string name="notification_message">"Are there still texts left unchecked? Don't miss our quick analysis!"</string>
    <string name="notification_subtext">Reminder</string>
    <string name="first_text">First Text</string>
    <string name="start_something_from_here">Start something from here....</string>
    <string name="second_text">Second Text</string>
    <string name="text_similiarity_result">Text Similiarity Result</string>
    <string name="similarity_result">Similarity: %.2f%%</string>
    <string name="error_no_result">Error occurred, please try again</string>
    <string name="loading">Loading...</string>
    <string name="error_empty_fields">Both fields must be filled</string>


</resources>